[package]
name = "ttn2sqlite"
version = "0.1.0"
authors = ["Jonas Treumer <endoplasmaticreticulum@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]
