[package]
name = "ttn2sqlite"
version = "0.1.0"
authors = ["Jonas Treumer <endoplasmaticreticulum@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]
