[package]
name = "ttn2sqlite"
version = "0.1.0"
authors = ["Jonas Treumer <endoplasmaticreticulum@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]
